
2018-01-19  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobcrun.c (main): raise explicit error if called without any PROGRAM
	  name given
	* cobcrun.c (cobcrun_initial_module): removed code parts for extending
	  environment options where not needed

2017-12-27  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobcrun.c (main): use of cob_resolve_cobol instead of cob_resolve
	  as we want its error handling in any case

2017-12-05  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobcrun.c [_WIN32]: added missing headers
	* cobcrun.c (cobcrun_split_path_file): no trailing slash for pathname

2017-11-21  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobcrun.c [_WIN32]: allowing tests to result in the expected line
	  ending for messages returned from cobcrun.c directly

2017-11-15  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobcrun.c: use (cob_init_nomain) instead of (cob_init) as it includes
	  no functions intended for COBOL use (speedup + workaround ltdl leak)

2017-11-02  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobcrun.c: check missing evaluation of command line option;
	  fixed printing newline to stderr instead of stdout;
	  code-coverage specific changes

2017-10-22  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* Makefile.am: moved include of top_srcdir to AM_CPPFLAGS to prevent
	  user-specified CPPFLAGS to override own includes, see bug #452

2017-08-08  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobcrun.c: use only memory and environment functions provided by libcob
	* cobcrun.c (cobcrun_setenv): removed

2017-06-16  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* Makefile.am: added CODE_COVERAGE parts as provided by AX_CODE_COVERAGE
	* cobcrun.c: don't print runtime env when program name > max length,
	  surrounded exception ABORTs that cannot be tested by LCOV_EXCP markers
