@@ -1,4 +1,9 @@
 
+2018-01-23  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* parser.y: use position of last section when defining an implicit
+	  paragraph
+
 2018-01-22  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* codgen.c (output_internal_function): don't clear sticky-linkage pointers
